--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
     ],
     "@babel/preset-react"
   ],
-  "plugins": ["dynamic-import-webpack"]
+  "plugins": ["@babel/plugin-syntax-dynamic-import"]
   // 如果是写库时，使用以下配置，避免polyfill会污染全局环境
   /*"plugins": [["@babel/plugin-transform-runtime", {
       "corejs": 2,
